--- a/service/public/index.html
+++ b/service/public/index.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/style.css">
     <title>Home</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <!-- JSON Editor-->
+    <div class="json-editor-index">
+        <textarea name="" id=""></textarea>
+    </div>
+
+    <!-- Send Button -->
+     <button>Send JSON Query</button>
+
+     <!-- Nick -->
+    <div class="nick">
+        <h1>Foo Bar</h1>
+    </div>
 </body>
 </html>
