--- a/service/public/index.html
+++ b/service/public/index.html
@@ -19,5 +19,10 @@
     <div class="nick">
         <h1>Foo Bar</h1>
     </div>
+
+    <!-- Image -->
+     <div class="image">
+
+     </div>
 </body>
 </html>
