--- a/service/public/index.html
+++ b/service/public/index.html
@@ -24,5 +24,11 @@
      <div class="image">
 
      </div>
+
+     <!-- Menu -->
+     <div class="menu">
+        <input type="search" name="" id="">
+        <button class="send-search">Send</button>
+     </div>
 </body>
 </html>
