--- a/service/public/login.html
+++ b/service/public/login.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Login</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+
+    <h1 class="messDFS-login">MessDFS</h1>
+    <!-- login div -->
+    <div class="login-div">
+        <label for="username">Username</label>
+        <input type="text" id="username"> <br>
+        <label for="password">Password</label>
+        <input type="password" name="" id="password"> <br>
+        <button id="send-login">Login</button>
+    </div>
 </body>
 </html>
