--- a/service/public/signup.html
+++ b/service/public/signup.html
@@ -3,9 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <h1>Signup To MessDFS</h1>
+
+    <div class="signup-div">
+        <label for="name">Name</label>
+        <input type="text" id="name"> <br>
+        <label for="surname">Surname</label>
+        <input type="text" id="surname"> <br>
+        <label for="email">Email</label>
+        <input type="email" id="email"> <br>
+        <label for="username-signup">Username</label>
+        <input type="text" id="username-signup"> <br>
+        <label for="password-singup">Password</label>
+        <input type="password" id="password-singup">
+        <button id="signup-button">Signup!</button>
+    </div>
 </body>
 </html>
