add signout page

--- a/service/public/signout.html
+++ b/service/public/signout.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <h1>Signout From MessDFS</h1>
+
+    <div class="signout-div">
+        <label for="username-signout">Username</label>
+        <input type="text" id="username-signout"> <br>
+        <label for="password-signout">Password</label>
+        <input type="password" id="password-signout">
+        <button>Signout</button>
+    </div>
 </body>
 </html>
