--- a/service/public/login.html
+++ b/service/public/login.html
@@ -18,4 +18,30 @@
         <button id="send-login">Login</button>
     </div>
 </body>
+
+    <script>
+        const button = document.getElementById("send-login")
+        button.addEventListener('click', function() {
+            const username = document.getElementById("username")
+            const password = document.getElementById("password")
+
+            fetch("http://localhost:8082/login", {
+                method:"POST",
+                body: JSON.stringify({
+                    usrname: username.value,
+                    pswd: password.value,
+                }),
+                headers: {
+                    "Content-Type": "application/json",
+                }
+            })
+            .then(function(response){
+                return response.json()
+            })
+            .then(function(data){
+                console.log(data)
+            })
+        })
+        
+    </script>
 </html>
